--- a/mainPage/support/classicMainPage.css
+++ b/mainPage/support/classicMainPage.css
@@ -109,7 +109,7 @@ main{
 .content_section .innerContent_div .innerComponent_div{
     display: flexbox;
     height: 350px;
-    background-color: rgb(245,245,245);
+    background-color: rgb(252, 252, 252);
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
