--- a/mainPage/support/classicMainPage.css
+++ b/mainPage/support/classicMainPage.css
@@ -109,12 +109,17 @@ main{
 .content_section .innerContent_div .innerComponent_div{
     display: flexbox;
     height: 350px;
-    background-color: rgb(252, 252, 252);
+    background-color: rgb(255, 255, 255);
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-filter: grayscale(50%); /* Chrome, Safari, Opera */
+    filter: grayscale(50%);
+    transition: 0.5s ease-in-out;
 }
-
+.content_section .innerContent_div .innerComponent_div:hover{
+    -webkit-filter: grayscale(0%); /* Chrome, Safari, Opera */
+    filter: grayscale(0%);
+}
 @media only screen and (min-width: 1200px) {
     .content_section .innerContent_div .innerComponent_div{
         margin: 1%;
@@ -146,15 +151,17 @@ main{
 }
 .content_section .innerContent_div .innerComponent_div .jumpLink_a .image_img{
     display: block;
-    margin: 0;
+    margin: -1px;
     padding: 0;
-    width: 100%;
-    height: 100%;
+    width: 101%;
+    height: 101%;
     background-size: contain;
     background-origin: padding-box;
     background-position: center;
     background-repeat: no-repeat;
     transition: 0.25s ease-in-out;
+    border: none;
+    outline: none;
 }
 .content_section .innerContent_div .innerComponent_div .jumpLink_a .image_img:hover{
     transform: scale(200%);
@@ -199,7 +206,6 @@ main{
     height: 50px;
     text-align: center;
     text-decoration: none;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transition: 0.25s ease-in-out;
 }
 .content_section .pages_div .bottomButton p{
@@ -213,11 +219,16 @@ main{
     color: rgb(26, 26, 26);
 }
 .content_section .pages_div .bottomButton:hover{
-    background-color: rgb(67, 223, 223);
-    box-shadow: 0 4px 8px 0 rgba(2, 118, 250, 0.219), 0 6px 20px 0 rgba(195, 0, 255, 0.19);
+    background-color: blueviolet;
+}
+.content_section .pages_div .bottomButton:hover p{
+    color: white;
 }
 #currentPage{
-    background-color: rgb(67, 223, 223);
+    background-color: blueviolet;
+}
+#currentPage p{
+    color: white;
 }
 .content_section .pages_div .page_button{
     width: 50px;
@@ -234,8 +245,7 @@ main{
     display: block;
     height: 250px;
     width: 100%;
-    background-color: rgb(236, 236, 236);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.377), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: rgb(199, 199, 199);
 }
 .foot_section .footInnerText_p{
     color: rgb(19, 19, 19);
