--- a/mainPage/support/classicMainPage.css
+++ b/mainPage/support/classicMainPage.css
@@ -41,7 +41,7 @@ body{
     display: none;
 }
 main{
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
     width: 100vw;
@@ -65,7 +65,7 @@ main{
     width: 80%;
     height: min-content;
     display: table;
-    color: rgba(0, 0, 0, 0.8);
+    color: rgba(255, 255, 255, 0.89);
 }
 .head_section .headInnerTitleContainer_div .headInnerTitle_div{
     padding: 20px;
@@ -86,7 +86,7 @@ main{
 
 .head_section .headInnerTitleContainer_div .headInnerTitle_div .headInnerText_p{
     font-size: 1vw;
-    color: rgba(51, 51, 51, 0.6);
+    color: rgba(255, 255, 255, 0.733);
     text-align: center;
 }
 
@@ -94,8 +94,8 @@ main{
     z-index: 9999;
     width: 100vw;
     padding: 0;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 70px;
+    padding-bottom: 70px;
     margin: 0;
     background-color: rgb(255, 255, 255);
 }
@@ -110,15 +110,10 @@ main{
 .content_section .innerContent_div .innerComponent_div{
     display: flexbox;
     height: 350px;
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(250, 250, 250);
+    box-shadow: 0 0 1px rgba(0,0,0,0.1);
     border-radius: 8px;
     overflow: hidden;
-    transition: 0.5s ease-in-out;
-
-}
-.content_section .innerContent_div .innerComponent_div:hover{
-    -webkit-filter: grayscale(0%); /* Chrome, Safari, Opera */
-    filter: grayscale(0%);
 }
 @media only screen and (min-width: 1200px) {
     .content_section .innerContent_div .innerComponent_div{
@@ -169,8 +164,10 @@ main{
 
 .content_section .innerContent_div .innerComponent_div .textArea_div{
     display: block;
+    position: absolute;
     padding-left: 10px;
     padding-top: 5px;
+    margin-top: 0;
 }
 .content_section .innerContent_div .innerComponent_div .textArea_div .contentInnerTitle_h2{
     margin: 0;
@@ -196,6 +193,7 @@ main{
     margin-top: 60px;
     display: flex;
     justify-content: center;
+    padding-bottom: 50px;
 }
 .content_section .pages_div .bottomButton{
     display: flexbox;
@@ -245,13 +243,14 @@ main{
     display: block;
     height: 250px;
     width: 100%;
-    background-color: rgba(243, 243, 243, 0.747);
+    background-color: rgb(24, 24, 24);
+    color: white;
 }
 .foot_section p:nth-child(1){
     margin-top: 0;
 }
 .foot_section .footInnerText_p{
-    color: rgb(19, 19, 19);
+    color: rgb(255, 255, 255);
     padding-top: 30px;
     text-align: center;
     font-size: 2em;
@@ -269,14 +268,4 @@ main{
 .foot_section .aboutAuthor_a{
     text-decoration: none;
     color: blueviolet;
-}
-.footfoot_section{
-    width: 100%;
-    background-color: rgb(218, 218, 218);
-}
-.footfoot_section p{
-    margin: 0;
-    padding: 5px;
-    text-align: center;
-    color: white;
 }
