--- a/codeBet/page_4/DEB_calculatorWebgl/style.css
+++ b/codeBet/page_4/DEB_calculatorWebgl/style.css
@@ -6,7 +6,7 @@
 body {
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 body::-webkit-scrollbar{
     display: none;
@@ -112,6 +112,7 @@ main{
 }
 
 .output{
+    display: none;
     width: 100vw;
     position: absolute;
     top: 100vh;
@@ -158,6 +159,9 @@ main{
     color: white;
 }
 
+#scs{
+    bottom: 160px;
+}
 #add{
     bottom: 90px;
 }
