--- a/codeBet/page_4/DED_calculator2dFunction/style.css
+++ b/codeBet/page_4/DED_calculator2dFunction/style.css
@@ -45,17 +45,17 @@ body::-webkit-scrollbar{
     display: none;
 }
         
-.ixcontainer{
-    height: 10vh;
+.ocontainer{
+    height: 20vh;
 }
-.iycontainer{
-    height: 10vh;
+.icontainer{
+    height: 5vh;
 }
 .ccontainer{
     height: 35vh;
 }
 .bcontainer{
-    height: 25vh;
+    height: 20vh;
 }
 
 #btnContainer{
