--- a/codeBet/page_4/DFA_MendelbrotSetFX/style.css
+++ b/codeBet/page_4/DFA_MendelbrotSetFX/style.css
@@ -50,3 +50,21 @@ body{
     margin: 4px;
     padding: 5px;
 }
+
+a{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    outline: none;
+    border: none;
+    background-color: rgba(80, 80, 80, 0.842);
+    width:50px;
+    height:50px;
+    line-height: 50px;
+    text-align: center;
+    letter-spacing: 2px;
+    text-decoration: none;
+    border-radius: 50%;
+    color: white;
+    cursor: pointer;
+}
